--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "Ecommerce",
   "version": "1.0.0",
   "main": "app.js",
+  "description": "repository of ecommerce site ",
   "dependencies": {
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
+    "mongoose": "^4.9.4",
     "morgan": "^1.8.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ashvin14/Ecommerce.git"
   }
 }
